ajout grand titre + titre 2 + dernier mais bug

--- a/forum/index.html
+++ b/forum/index.html
@@ -277,8 +277,12 @@
 													<div class="nodeText ">
 														<div class="titre2">
 															<h3 class="nodeTitle ">
-																	<div class="blokpage"><p> </p></div>
-																<a href="index.php?forums/annonces-r%C3%A8glements.2/ " data-description="#nodeDescription-2 "><p class="textetitre2">Annonces et Règlements</p></a>
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/annonces-r%C3%A8glements.2/ " data-description="#nodeDescription-2 ">
+																	<p class="textetitre2">Annonces et Règlements</p>
+																</a>
 															</h3>
 														</div>
 
@@ -379,11 +383,18 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/recrutement.3/ " data-description="#nodeDescription-3 ">Recrutement</a>
-														</h3>
+														<div class="titre2">
 
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/recrutement.3/ " data-description="#nodeDescription-3 ">
+																	<p class="textetitre2">Recrutement</p>
+																</a>
+															</h3>
 
+														</div>
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-3 ">Consultez les offres de recrutement, postez votre CV, lisez celui des autres. Retrouvez ici les recrutements
 															officiels d'EnergyGaming
 														</blockquote>
@@ -634,10 +645,16 @@
 													<span class="nodeIcon " title=" "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/pr%C3%A9sentation-des-membres.62/ " data-description="#nodeDescription-62 ">Présentation des membres</a>
-														</h3>
-
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/pr%C3%A9sentation-des-membres.62/ " data-description="#nodeDescription-62 ">
+																	<p class="textetitre2">Présentation des membres</p>
+																</a>
+															</h3>
+														</div>
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-62 ">Là ou ce présente les membres</blockquote>
 
@@ -696,10 +713,16 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/ip-partag%C3%A9e.147/ " data-description="#nodeDescription-147 ">Ip partagée</a>
-														</h3>
-
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/ip-partag%C3%A9e.147/ " data-description="#nodeDescription-147 ">
+																	<p class="textetitre2">Ip partagée</p>
+																</a>
+															</h3>
+														</div>
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-147 ">Pour informer de vos frères et sœurs sur la même ip</blockquote>
 
@@ -772,10 +795,16 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/grade-habitu%C3%A9.170/ " data-description="#nodeDescription-170 ">Grade Habitué</a>
-														</h3>
-
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/grade-habitu%C3%A9.170/ " data-description="#nodeDescription-170 ">
+																	<p class="textetitre2">Grade Habitué</p>
+																</a>
+															</h3>
+														</div>
 
 
 														<div class="nodeStats pairsInline ">
@@ -855,10 +884,16 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/corbeille.98/ " data-description="#nodeDescription-98 ">Corbeille</a>
-														</h3>
-
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/corbeille.98/ " data-description="#nodeDescription-98 ">
+																	<p class="textetitre2">Corbeille</p>
+																</a>
+															</h3>
+														</div>
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-98 ">Tous les postes supprimés .</blockquote>
 
@@ -923,7 +958,15 @@
 
 											<div class="categoryText ">
 												<h3 class="nodeTitle ">
-													<a href="index.php#le-serveur.6 ">Le Serveur</a>
+													<center>
+														<div class="grandtitre">
+															<a href="index.php#le-serveur.6 " id="titre">
+																<p>LE SERVEUR</p>
+															</a>
+														</div>
+
+													</center>
+
 												</h3>
 
 											</div>
@@ -944,9 +987,16 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/suggestions-id%C3%A9es.7/ " data-description="#nodeDescription-7 ">Suggestions &amp; Idées</a>
-														</h3>
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/suggestions-id%C3%A9es.7/ " data-description="#nodeDescription-7 ">
+																	<p class="textetitre2">Suggestions et Idées</p>
+																</a>
+															</h3>
+														</div>
 
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-7 ">Vous pensez que quelque chose doit être apporté au serveur ? Une classe ne vous paraît pas assez équilibrée
@@ -1176,9 +1226,17 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/rapport-de-bugs.14/ " data-description="#nodeDescription-14 ">Rapport de Bugs</a>
-														</h3>
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/rapport-de-bugs.14/ " data-description="#nodeDescription-14 ">
+																	<p class="textetitre2">Rapport de Bugs</p>
+																</a>
+															</h3>
+														</div>
+
 
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-14 ">Signalez les vilains petits problèmes techniques, les petites coquilles ou les insectes vindicatifs s'étant
@@ -1403,9 +1461,17 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/plaintes-et-r%C3%A9clamations.22/ " data-description="#nodeDescription-22 ">Plaintes et réclamations</a>
-														</h3>
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/plaintes-et-r%C3%A9clamations.22/ " data-description="#nodeDescription-22 ">
+																	<p class="textetitre2">Plaintes et réclamations</p>
+																</a>
+															</h3>
+														</div>
+
 
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-22 ">Des joueurs vous offensent ? Aidez les modérateurs et signalez ici le non respect du règlement du serveur.
@@ -1537,9 +1603,17 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/besoin-daide.24/ " data-description="#nodeDescription-24 ">Besoin d&#039;aide ?</a>
-														</h3>
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/besoin-daide.24/ " data-description="#nodeDescription-24 ">
+																	<p class="textetitre2">Besoin d&#039;aide ?</p>
+																</a>
+															</h3>
+														</div>
+
 
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-24 ">Un problème ? Quelque chose vous échappe ? Venez en discuter avec les autres membres dans cette catégorie</blockquote>
@@ -1669,9 +1743,17 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/suggestion-discord.178/ " data-description="#nodeDescription-178 ">Suggestion Discord</a>
-														</h3>
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/suggestion-discord.178/ " data-description="#nodeDescription-178 ">
+																	<p class="textetitre2">Suggestion Discord</p>
+																</a>
+															</h3>
+														</div>
+
 
 
 
@@ -1757,10 +1839,19 @@
 
 											<div class="categoryText ">
 												<h3 class="nodeTitle ">
-													<a href="index.php#la-taverne.52 ">La Taverne</a>
+													<center>
+														<div class="grandtitre">
+															<a href="index.php#la-taverne.52 " id="titre">
+																<p>LA TAVERNE</p>
+															</a>
+
+														</div>
+														<blockquote class="nodeDescription baseHtml ">Ici parlez de tout et de rien ! L'endroit parfait ou ce détendre alors que vous buvez du rhum, des millions
+															de sujets complètement wtf vous attendes !</blockquote>
+
+													</center>
 												</h3>
-												<blockquote class="nodeDescription baseHtml ">Ici parlez de tout et de rien ! L'endroit parfait ou ce détendre alors que vous buvez du rhum, des millions de
-													sujets complètement wtf vous attendes !</blockquote>
+
 											</div>
 
 										</div>
@@ -1779,9 +1870,16 @@
 													<span class="nodeIcon " title=" "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/le-serveur.53/ " data-description="#nodeDescription-53 ">Le Serveur</a>
-														</h3>
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/le-serveur.53/ " data-description="#nodeDescription-53 ">
+																	<p class="textetitre2">Le Serveur</p>
+																</a>
+															</h3>
+														</div>
 
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-53 ">Ici exploitez les possibilités du serveur et faites en part aux autres !</blockquote>
@@ -1833,9 +1931,17 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/energyfight.54/ " data-description="#nodeDescription-54 ">EnergyFight</a>
-														</h3>
+
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/energyfight.54/ " data-description="#nodeDescription-54 ">
+																	<p class="textetitre2">EnergyFight</p>
+																</a>
+															</h3>
+														</div>
 
 
 
@@ -1916,9 +2022,16 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/energyplay.57/ " data-description="#nodeDescription-57 ">EnergyPlay</a>
-														</h3>
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/energyplay.57/ " data-description="#nodeDescription-57 ">
+																	<p class="textetitre2">EnergyPlay</p>
+																</a>
+															</h3>
+														</div>
 
 
 
@@ -2021,10 +2134,16 @@
 													<span class="nodeIcon " title=" "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/energycheat.83/ " data-description="#nodeDescription-83 ">EnergyCheat</a>
-														</h3>
-
+														<div class="titre2">
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/energycheat.83/ " data-description="#nodeDescription-83 ">
+																	<p class="textetitre2">EnergyCheat</p>
+																</a>
+															</h3>
+														</div>
 
 
 														<div class="nodeStats pairsInline ">
@@ -2112,9 +2231,16 @@
 													<span class="nodeIcon " title=" "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/taverne.86/ " data-description="#nodeDescription-86 ">Taverne</a>
-														</h3>
+														<div class="titre2">
+																<h3 class="nodeTitle ">
+																	<div class="blokpage">
+																		<p> </p>
+																	</div>
+																	<a href="index.php?forums/taverne.86/ " data-description="#nodeDescription-86 ">
+																		<p class="textetitre2">Taverne</p>
+																	</a>
+																</h3>
+															</div>
 
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-86 ">Ici parlez mais vraiment de tout ce qui vous passes pas la tête tant que cela respecte les règles imposés.</blockquote>
@@ -2175,9 +2301,16 @@
 													<span class="nodeIcon " title="Messages non lus "></span>
 
 													<div class="nodeText ">
-														<h3 class="nodeTitle ">
-															<a href="index.php?forums/absence.97/ " data-description="#nodeDescription-97 ">Absence</a>
-														</h3>
+														<div class="titre2">
+																<h3 class="nodeTitle ">
+																	<div class="blokpage">
+																		<p> </p>
+																	</div>
+																	<a href="index.php?forums/absence.97/ " data-description="#nodeDescription-97 ">
+																		<p class="textetitre2">Absence</p>
+																	</a>
+																</h3>
+															</div>
 
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-97 ">Décrivez vos durées d'absences .</blockquote>
