modif page forum

--- a/page.html
+++ b/page.html
@@ -237,7 +237,7 @@
 	<div id="proj4">
 		<p class="texte2">Je suis en train de créer un jeu de parcours de labyrinthe en mode multi-joueurs.
 			<br> Le jeu à la fin sera en Node JS.
-			<br>Pour le moment j'arrive en javascript/Jquery et CSS a génèrer un parcours aléatoire.
+			<br>Pour le moment j'arrive en javascript/Jquery et CSS a générer un parcours aléatoire.
 			<br>J'ai créé un algo pour ca. </p>
 		<a href="jeu laby/index.html" target="_blank">
 			<button type="button" class="btn btn-danger"> Générer le labyrinthe !</button>
@@ -249,9 +249,11 @@
 		<p class="soustexte">Le Forum</p>
 	</div>
 	<div id="proj5">
+		<br>
+		<br>
 		<center>
 			<div class="bando3">
-				<p class="texte2">Je me suis proposé pour modifier le style d'un forum qui commencait à avoir un style un peu vieux. le lien du forum est
+				<p class="texte2">Modernisation du forum energygaming. Maquette proposée avec J'ai proposé une maquette sur Figma le lien du forum est
 					<a href="https://energygaming.fr/forum/index.php" target="_blank" id="url">ici</a>
 				</p>
 			</div>
@@ -260,6 +262,7 @@
 			<button type="button" class="btn btn-danger"> Voir mon avancement</button>
 		</a>
 		<p></p>
+		<br>
 	</div>
 
 
