--- a/page.html
+++ b/page.html
@@ -253,7 +253,7 @@
 		<br>
 		<center>
 			<div class="bando3">
-				<p class="texte2">Modernisation du forum energygaming. Maquette proposée avec J'ai proposé une maquette sur Figma le lien du forum est
+				<p class="texte2">Modernisation du forum energygaming. J'ai proposé une maquette sur Figma le lien du forum est
 					<a href="https://energygaming.fr/forum/index.php" target="_blank" id="url">ici</a>
 				</p>
 			</div>
