ajout jeu de societe

--- a/page.html
+++ b/page.html
@@ -244,6 +244,23 @@
 		</a>
 		<p></p>
 	</div>
+	<div class="sousbando" id="societe">
+		<p class="soustexte">Le jeu de société (un jeu en création)</p>
+	</div>
+	<div id="proj6">
+		<div class="gauche1">
+			<p class="texte3">Avec Alexandre TROUVE-MOSSERON, nous créons un jeu de société.<br> Avec alexandre pour les dessins (plateaux, personnages ....) et moi pour le reste!
+			</p>
+			<h2 class="texte3">Le plateau de jeu</h2>
+			<img class="imagess" src="plateau.png">
+		</div>
+		<div class="droite1">
+			<p class="texte3">"‘Le roi est mort , vive le Roi’. Le fils du défunt roi Aymar IV vient d’être couronné. Il réunit l’ensemble de ses contre-maîtres dont vous faites parti dans la salle d’arme de son château  : « Notre royaume, celui de Grôme est maintenant, grâce à feu mon père, notre précédent roi, en paix. Il a beaucoup souffert des guerres déclarées par nos ennemis. Il faut le reconstruire. Nous avons besoin de moulins pour moudre le blé, de ponts pour circuler, de remparts pour se protéger. Mon conseiller va vous proposer des quêtes. Je donnerai un titre de noblesse au meilleur d’entre vous, celui qui en réussira le plus ! »"
+			</p>
+		</div>
+		</a>
+		<p></p>
+	</div>
 
 	<div class="sousbando" id="forum">
 		<p class="soustexte">Le Forum</p>
