--- a/forum/index.html
+++ b/forum/index.html
@@ -110,36 +110,37 @@
 													</a>
 
 													<a href="https://energygaming.fr/forum/index.php?members/ " class="navLink ">
-														<p class="textetabbasgauche ">MEMBRES</p>
+														<p class="textetabbasgauche " id="membretab">MEMBRES</p>
 													</a>
+													<div class="Menu JsOnly tabMenu membersTabLinks ">
+														<div class="primaryContent menuHeader ">
+															<h3>Membres</h3>
+															<div class="muted ">Liens rapides</div>
+														</div>
+														<ul class="secondaryContent blockLinksList ">
+
+															<li>
+																<a href="index.php?members/ ">Membres notables</a>
+															</li>
+															<li>
+																<a href="index.php?members/list ">Membres inscrits</a>
+															</li>
+															<li>
+																<a href="index.php?online/ ">Visiteurs actuels</a>
+															</li>
+															<li>
+																<a href="index.php?recent-activity/ ">Activités récentes</a>
+															</li>
+															<li>
+																<a href="index.php?find-new/profile-posts ">Nouveaux messages de profil</a>
+															</li>
+
+														</ul>
+													</div>
 													<a href="https://energygaming.fr/forum/index.php?members/ " class="SplitCtrl " rel="Menu "></a>
-													<!--<li class="navTab members Popup PopupControl PopupClosed ">
-						<div class="Menu JsOnly tabMenu membersTabLinks ">
-							<div class="primaryContent menuHeader ">
-								<h3>Membres</h3>
-								<div class="muted ">Liens rapides</div>
-							</div>
-							<ul class="secondaryContent blockLinksList ">
-
-								<li>
-									<a href="index.php?members/ ">Membres notables</a>
-								</li>
-								<li>
-									<a href="index.php?members/list ">Membres inscrits</a>
-								</li>
-								<li>
-									<a href="index.php?online/ ">Visiteurs actuels</a>
-								</li>
-								<li>
-									<a href="index.php?recent-activity/ ">Activités récentes</a>
-								</li>
-								<li>
-									<a href="index.php?find-new/profile-posts ">Nouveaux messages de profil</a>
-								</li>
-
-							</ul>
-						</div>
-					</li>-->
+													<li class="navTab members Popup PopupControl PopupClosed ">
+														
+													</li>
 												</div>
 												<div class="droitetab " style="float:right; ">
 													<a href="index.php?conversations/ " id="lienhaut">
@@ -278,7 +279,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/annonces-r%C3%A8glements.2/ " data-description="#nodeDescription-2 ">
 																	<p class="textetitre2">Annonces et Règlements</p>
@@ -387,7 +388,7 @@
 
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/recrutement.3/ " data-description="#nodeDescription-3 ">
 																	<p class="textetitre2">Recrutement</p>
@@ -648,7 +649,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/pr%C3%A9sentation-des-membres.62/ " data-description="#nodeDescription-62 ">
 																	<p class="textetitre2">Présentation des membres</p>
@@ -716,7 +717,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/ip-partag%C3%A9e.147/ " data-description="#nodeDescription-147 ">
 																	<p class="textetitre2">Ip partagée</p>
@@ -798,7 +799,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/grade-habitu%C3%A9.170/ " data-description="#nodeDescription-170 ">
 																	<p class="textetitre2">Grade Habitué</p>
@@ -887,7 +888,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/corbeille.98/ " data-description="#nodeDescription-98 ">
 																	<p class="textetitre2">Corbeille</p>
@@ -990,7 +991,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/suggestions-id%C3%A9es.7/ " data-description="#nodeDescription-7 ">
 																	<p class="textetitre2">Suggestions et Idées</p>
@@ -1229,7 +1230,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/rapport-de-bugs.14/ " data-description="#nodeDescription-14 ">
 																	<p class="textetitre2">Rapport de Bugs</p>
@@ -1464,7 +1465,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/plaintes-et-r%C3%A9clamations.22/ " data-description="#nodeDescription-22 ">
 																	<p class="textetitre2">Plaintes et réclamations</p>
@@ -1606,7 +1607,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/besoin-daide.24/ " data-description="#nodeDescription-24 ">
 																	<p class="textetitre2">Besoin d&#039;aide ?</p>
@@ -1746,7 +1747,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/suggestion-discord.178/ " data-description="#nodeDescription-178 ">
 																	<p class="textetitre2">Suggestion Discord</p>
@@ -1873,7 +1874,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/le-serveur.53/ " data-description="#nodeDescription-53 ">
 																	<p class="textetitre2">Le Serveur</p>
@@ -1935,7 +1936,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/energyfight.54/ " data-description="#nodeDescription-54 ">
 																	<p class="textetitre2">EnergyFight</p>
@@ -2025,7 +2026,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/energyplay.57/ " data-description="#nodeDescription-57 ">
 																	<p class="textetitre2">EnergyPlay</p>
@@ -2137,7 +2138,7 @@
 														<div class="titre2">
 															<h3 class="nodeTitle ">
 																<div class="blokpage">
-																	<p> </p>
+																	<p> </p>
 																</div>
 																<a href="index.php?forums/energycheat.83/ " data-description="#nodeDescription-83 ">
 																	<p class="textetitre2">EnergyCheat</p>
@@ -2232,15 +2233,15 @@
 
 													<div class="nodeText ">
 														<div class="titre2">
-																<h3 class="nodeTitle ">
-																	<div class="blokpage">
-																		<p> </p>
-																	</div>
-																	<a href="index.php?forums/taverne.86/ " data-description="#nodeDescription-86 ">
-																		<p class="textetitre2">Taverne</p>
-																	</a>
-																</h3>
-															</div>
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/taverne.86/ " data-description="#nodeDescription-86 ">
+																	<p class="textetitre2">Taverne</p>
+																</a>
+															</h3>
+														</div>
 
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-86 ">Ici parlez mais vraiment de tout ce qui vous passes pas la tête tant que cela respecte les règles imposés.</blockquote>
@@ -2302,15 +2303,15 @@
 
 													<div class="nodeText ">
 														<div class="titre2">
-																<h3 class="nodeTitle ">
-																	<div class="blokpage">
-																		<p> </p>
-																	</div>
-																	<a href="index.php?forums/absence.97/ " data-description="#nodeDescription-97 ">
-																		<p class="textetitre2">Absence</p>
-																	</a>
-																</h3>
-															</div>
+															<h3 class="nodeTitle ">
+																<div class="blokpage">
+																	<p> </p>
+																</div>
+																<a href="index.php?forums/absence.97/ " data-description="#nodeDescription-97 ">
+																	<p class="textetitre2">Absence</p>
+																</a>
+															</h3>
+														</div>
 
 
 														<blockquote class="nodeDescription nodeDescriptionTooltip baseHtml " id="nodeDescription-97 ">Décrivez vos durées d'absences .</blockquote>
@@ -2334,7 +2335,7 @@
 
 
 
-													
+
 													<div class="nodeLastPost secondaryContent ">
 
 														<span class="lastThreadTitle ">
